<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".LevelsFragment">

    <TextView
        android:id="@+id/tv_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/jugadorNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/totalScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Nombre" />

    <TextView
        android:id="@+id/tv_Manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/et_vidas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Score" />

    <ImageView
        android:id="@+id/ivManzanas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toEndOf="@+id/tv_Manzanas"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/ivNumUno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Manzanas"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imOperando"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/ivNumUno"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adicion" />

    <ImageView
        android:id="@+id/ivNumeroDos"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="188dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/imOperando"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cero" />

    <EditText
        android:id="@+id/etRespuesta"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/et_Respuesta"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imOperando" />

    <Button
        android:id="@+id/comprobar"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_Sumar"
        app:layout_constraintStart_toEndOf="@+id/etRespuesta"
        app:layout_constraintTop_toBottomOf="@+id/ivNumeroDos" />
</androidx.constraintlayout.widget.ConstraintLayout>